--- a/index.html
+++ b/index.html
@@ -8,34 +8,34 @@
 <body>
     <div class="main-container">
         <h1>Travel Benefits</h1>
-        <p>We are self data analytical software that lest you create visually appeariling data visualization insightful dashboard in minutess.</p>
+        <p>We are self data analytical software that lest you create visually appearing data visualization insightful dashboard in minutes.</p>
         
         <div class="bottom-container">
-        <div >
-            <img class="logos" src="https://assets.ccbp.in/frontend/intermediate-rwd/cheap-than-other-img.png">
-            <h4>Cheap than other</h4>
-            <p> The terifyinh of the product with benfit</p>
-        </div>
-        <div>
-            <img class="logos" src="https://assets.ccbp.in/frontend/intermediate-rwd/secure-payment-img.png">
-            <h4>Cheap than other</h4>
-            <p> The terifyinh of the product with benfit</p>
-        </div>
-        <div>
-            <img class="logos" src="https://assets.ccbp.in/frontend/intermediate-rwd/best-offers-img.png">
-            <h4>Cheap than other</h4>
-            <p> The terifyinh of the product with benfit</p>
-        </div>
-        <div>
-            <img class="logos" src="https://assets.ccbp.in/frontend/intermediate-rwd/free-amenities-img.png">
-            <h4>Cheap than other</h4>
-            <p> The terifyinh of the product with benfit</p>
-        </div>
-        <div>png
-            <img class="logos" src="https://assets.ccbp.in/frontend/intermediate-rwd/top-rated-img.png">
-            <h4>Cheap than other</h4>
-            <p> The terifyinh of the product with benfit</p>
-        </div>
+            <div class="distance">
+                <img class="logos" src="https://assets.ccbp.in/frontend/intermediate-rwd/cheap-than-other-img.png">
+                <h4>Cheap than other</h4>
+                <p> The of the product with benefit</p>
+            </div>
+            <div class="distance">
+                <img class="logos" src="https://assets.ccbp.in/frontend/intermediate-rwd/secure-payment-img.png">
+                <h4>Cheap than other</h4>
+                <p> The of the product with benefit</p>
+            </div>
+            <div class="distance">
+                <img class="logos" src="https://assets.ccbp.in/frontend/intermediate-rwd/best-offers-img.png">
+                <h4>Cheap than other</h4>
+                <p> The of the product with benefit</p>
+            </div>
+            <div class="distance">
+                <img class="logos" src="https://assets.ccbp.in/frontend/intermediate-rwd/free-amenities-img.png">
+                <h4>Cheap than other</h4>
+                <p> The of the product with benefit</p>
+            </div>
+            <div class="distance">
+                <img class="logos" src="https://assets.ccbp.in/frontend/intermediate-rwd/top-rated-img.png">
+                <h4>Cheap than other</h4>
+                <p> The of the product with benefit</p>
+            </div>
         </div>
     </div>
 </body>
